# felix-and-pearl-bots

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  app.py  birthday_config.py  bot_config.py  config.json  days.db  deploy.sh  env.json.sample  env_config.py  example.env.json  example.secrets.json  lambda_function.py  prompts.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  template.yaml
.cargo/: config.toml
.github/workflows/: deploy.yml
aws-scripts/: aws-config.sh  deploy.sh  invoke-aws.sh  invoke-local.sh
events/: test-event.json
scripts/: build_lambda.py  deploy.py  test.py
src/: __init__.py  ai.py  ai.rs  birthday_config.py  config.py  config.rs  database.rs  discord.py  discord.rs  dst_switch.py  lambda_function.py  lib.rs  main.rs  models.rs  prompts.py  requirements.txt
src/config/: config.py  prompts.py
src/handlers/: ai.py  discord.py
src/services/: birthdays.py  national_days.py  weather.py
tests/: conftest.py
tests/integration/: test_lambda_handler.py
tests/unit/: test_app.py  test_birthday_config.py  test_env_config.py  test_message_generation.py
