[package]
name = "felix-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.23", features = ["rustls-tls", "json"], default-features = false }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
time = { version = "0.3.31", features = ["macros", "formatting"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"], default-features = false }
tracing = { version = "0.1", features = ["attributes"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
