[package]
name = "felix-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.79"
# Simplified HTTP client with minimal features
ureq = { version = "2.9.1", features = ["json"] }
# SQLite without bundled feature (using system SQLite instead)
rusqlite = "0.30.0"
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
# Simple logging
simple_logger = "4.3.3"
log = "0.4.20"

[profile.release]
lto = false
codegen-units = 16
strip = true
opt-level = 1
