[tool.poetry]
name = "felix-and-pearl-bots"
version = "0.1.0"
description = "AWS Lambda functions for Felix and Pearl bots"
authors = ["Thomas Lent <thomas@thomaslent.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.34.0"
anthropic = "^0.18.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.12.0"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
strict = true
