[tool.poetry]
name = "felix-and-pearl-bots"
version = "0.1.0"
description = "AWS Lambda functions for Felix and Pearl bots"
authors = ["Thomas Lent <thomas@thomaslent.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.34.69"
anthropic = "^0.49.0"
requests = "^2.31.0"
python-dateutil = "^2.9.0"
beautifulsoup4 = "^4.12.3"
pytz = "^2025.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
types-requests = "^2.31.0.20240311"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2025.2.0.20250326"
types-boto3 = "^1.37.35"
types-beautifulsoup4 = "^4.12.0.20250204"

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = ["E203", "E501"] # Ignore line length and whitespace before ':' errors
exclude = [".git", "__pycache__", "build", "dist", "venv", ".aws-sam"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # Allow assert statements in tests
